--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "angular": "1.x",
-    "angular-route": "1.x",
-    "mobile-angular-ui": "1.2.x",
-    "font-awesome": "4.2",
-    "bootstrap": "3.x",
-    "ng-flow": "~2",
-    "angular-timer": "~1.3.3",
+    "angular-bootstrap-select": "~0.0.5",
     "angular-local-storage": "~0.2.2",
-    "angular-bootstrap-select": "~0.0.5"
+    "angular-route": "1.x",
+    "angular-timer": "~1.3.3",
+    "bootstrap": "3.x",
+    "font-awesome": "4.2",
+    "mobile-angular-ui": "1.2.x",
+    "ng-flow": "~2",
+    "social-share-js": "~1.0.4"
   }
 }
