--- a/bower.json
+++ b/bower.json
@@ -8,10 +8,16 @@
     "angular-local-storage": "~0.2.2",
     "angular-route": "1.x",
     "angular-timer": "~1.3.3",
+    "angular-translate": "~2.8.0",
+    "angular-translate-loader-static-files": "~2.8.0",
+    "angular-translate-loader-url": "~2.8.0",
     "bootstrap": "3.x",
     "font-awesome": "4.2",
     "mobile-angular-ui": "1.2.x",
     "ng-flow": "~2",
     "social-share-js": "~1.0.4"
+  },
+  "resolutions": {
+    "angular": "1.4.6"
   }
 }
