--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "angular": "1.x",
     "angular-bootstrap-select": "~0.0.5",
     "angular-local-storage": "~0.2.2",
+    "angular-native-datepicker": "angular-native-picker#~1.0.4",
     "angular-route": "1.x",
     "angular-timer": "~1.3.3",
     "angular-translate": "~2.8.0",
